pdf parsing using azure ai document intelligence. fixed 2 code blocks. 1-increased elastic client timeout. 2-fixed issue in combine pararaph and table text

--- a/supporting-blog-content/pdf-azure-ai-document-intelligence/pdf-azure-ai-document-intelligence.ipynb
+++ b/supporting-blog-content/pdf-azure-ai-document-intelligence/pdf-azure-ai-document-intelligence.ipynb
@@ -265,10 +265,16 @@
     "    structured_data = []\n",
     "\n",
     "    # Combine paragraph and table content\n",
-    "    for p_number, contents in {**paragraph_content, **table_content}.items():\n",
+    "    for p_number in set(paragraph_content.keys()).union(table_content.keys()):\n",
     "        concatenated_text = \"\"\n",
-    "        for content in contents:\n",
-    "            concatenated_text += content[\"content_text\"] + \"\\n\"\n",
+    "\n",
+    "        if p_number in paragraph_content:\n",
+    "            for content in paragraph_content[p_number]:\n",
+    "                concatenated_text += content[\"content_text\"] + \"\\n\"\n",
+    "\n",
+    "        if p_number in table_content:\n",
+    "            for content in table_content[p_number]:\n",
+    "                concatenated_text += content[\"content_text\"] + \"\\n\"\n",
     "\n",
     "        page_content_concatenated[p_number] = concatenated_text.strip()\n",
     "\n",
@@ -360,7 +366,7 @@
     "ES_URL = os.getenv(\"ES_URL\")\n",
     "ES_API_KEY = os.getenv(\"ES_API_KEY\")\n",
     "\n",
-    "es = Elasticsearch(hosts=ES_URL, api_key=ES_API_KEY, request_timeout=60)"
+    "es = Elasticsearch(hosts=ES_URL, api_key=ES_API_KEY, request_timeout=300)"
    ]
   },
   {
