using os.environ to save sensitive variables

--- a/supporting-blog-content/using-crewai-with-elasticsearch/using_crewai_with_elasticsearch_notebook.ipynb
+++ b/supporting-blog-content/using-crewai-with-elasticsearch/using_crewai_with_elasticsearch_notebook.ipynb
@@ -82,8 +82,8 @@
       },
       "outputs": [],
       "source": [
-        "ELASTIC_ENDPOINT = getpass(\"Elastic Enpoint: \")\n",
-        "ELASTIC_API_KEY = getpass(\"Elastic Api Key: \")\n",
+        "os.environ[\"ELASTIC_ENDPOINT\"] = getpass(\"Elastic Enpoint: \")\n",
+        "os.environ[\"ELASTIC_API_KEY\"] = getpass(\"Elastic Api Key: \")\n",
         "os.environ[\"SERPER_API_KEY\"] = getpass(\"Seper API Key: \")\n",
         "os.environ[\"OPENAI_API_KEY\"] = getpass(\"OpenAI API Key: \")"
       ]
@@ -107,8 +107,8 @@
       "source": [
         "# Elasticsearch client\n",
         "_client = Elasticsearch(\n",
-        "    ELASTIC_ENDPOINT,\n",
-        "    api_key=ELASTIC_API_KEY,\n",
+        "    os.environ[\"ELASTIC_ENDPOINT\"],\n",
+        "    api_key=os.environ[\"ELASTIC_API_KEY\"],\n",
         ")"
       ]
     },
