--- a/supporting-blog-content/using-crewai-with-elasticsearch/using_crewai_with_elasticsearch_notebook.ipynb
+++ b/supporting-blog-content/using-crewai-with-elasticsearch/using_crewai_with_elasticsearch_notebook.ipynb
@@ -32,7 +32,7 @@
       },
       "outputs": [],
       "source": [
-        "# suggest to rin this script with Python 3.11\n",
+        "# It is suggested to run this script with Python 3.11\n",
         "%pip install elasticsearch==8.17 'crewai[tools]'"
       ]
     },
