--- a/supporting-blog-content/using-crewai-with-elasticsearch/using_crewai_with_elasticsearch_notebook.ipynb
+++ b/supporting-blog-content/using-crewai-with-elasticsearch/using_crewai_with_elasticsearch_notebook.ipynb
@@ -84,7 +84,7 @@
       "source": [
         "os.environ[\"ELASTIC_ENDPOINT\"] = getpass(\"Elastic Enpoint: \")\n",
         "os.environ[\"ELASTIC_API_KEY\"] = getpass(\"Elastic Api Key: \")\n",
-        "os.environ[\"SERPER_API_KEY\"] = getpass(\"Seper API Key: \")\n",
+        "os.environ[\"SERPER_API_KEY\"] = getpass(\"Serper API Key: \")\n",
         "os.environ[\"OPENAI_API_KEY\"] = getpass(\"OpenAI API Key: \")"
       ]
     },
