--- a/supporting-blog-content/using-crewai-with-elasticsearch/using_crewai_with_elasticsearch_notebook.ipynb
+++ b/supporting-blog-content/using-crewai-with-elasticsearch/using_crewai_with_elasticsearch_notebook.ipynb
@@ -107,7 +107,7 @@
       "source": [
         "# Elasticsearch client\n",
         "_client = Elasticsearch(\n",
-        "    os.environ[\"ELASTIC_ENDPOINT\"],\n",
+        "    hosts=os.environ[\"ELASTIC_ENDPOINT\"],\n",
         "    api_key=os.environ[\"ELASTIC_API_KEY\"],\n",
         ")"
       ]
