Added note after inference endpoint creation in notebook

--- a/supporting-blog-content/using-crewai-with-elasticsearch/using_crewai_with_elasticsearch_notebook.ipynb
+++ b/supporting-blog-content/using-crewai-with-elasticsearch/using_crewai_with_elasticsearch_notebook.ipynb
@@ -158,6 +158,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "*NOTE: After creating the inference endpoint, it is highly recommended to wait 30 seconds for the model to be ready before sending requests.*"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
