renaming notebook file and folder

--- a/supporting-blog-content/using-llamaIndex-workflows-with-elasticsearch/using-llamaIndex-workflows-with-elasticsearch.ipynb
+++ b/supporting-blog-content/using-llamaIndex-workflows-with-elasticsearch/using-llamaIndex-workflows-with-elasticsearch.ipynb
@@ -6,7 +6,7 @@
         "id": "LlrEjmtJNpuX"
       },
       "source": [
-        "# Llama-index workflow Elasticsearch\n",
+        "# Using LlamaIndex Workflows with Elasticsearch\n",
         "\n",
         "This notebook demonstrates how to use AutoGen with Elasticsearch. This notebook is based on the article [Using AutoGen with Elasticsearch](https://www.elastic.co/search-labs/blog/using-autogen-with-elasticsearch)."
       ]
