Adding notes for inference_id is not required

--- a/notebooks/search/12-semantic-reranking-elastic-rerank.ipynb
+++ b/notebooks/search/12-semantic-reranking-elastic-rerank.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "You will:\n",
     "\n",
-    "- Create an inference endpoint to manage your `rerank` task. This will download and deploy the Elastic Rerank model.\n",
+    "- Use a preconfigured inference endpoint for `rerank` task, skipping the need to create one manually. Alternatively, you can create a new inference endpoint to download and deploy the Elastic Rerank model.\n",
     "- Query your data using the `text_similarity_rerank` retriever, leveraging the Elastic Rerank model."
    ]
   },
@@ -241,8 +241,9 @@
    },
    "source": [
     "## Create inference endpoint\n",
+    "*Note* You can use the preconfigured inference endpoint `.rerank-v1-elasticsearch`, which eliminates the need to create an inference endpoint manually. However, if you prefer to manage your own endpoint, follow the steps below.\n",
     "\n",
-    "Next we'll create an inference endpoint for the `rerank` task to deploy and manage our model and, if necessary, spin up the necessary ML resources behind the scenes."
+    "Next we'll create an inference endpoint for the `rerank` task to deploy and manage our model and, if necessary, spin up the necessary ML resources behind the scenes. "
    ]
   },
   {
@@ -543,7 +544,9 @@
    "source": [
     "Success! \"The Silence of the Lambs\" is our top result. Semantic reranking helped us find the most relevant result by parsing a natural language query, overcoming the limitations of lexical search that relies on keyword matching.\n",
     "\n",
-    "Semantic reranking enables semantic search in a few steps, without the need for generating and storing embeddings. This a great tool for testing and building hybrid search systems in Elasticsearch."
+    "Semantic reranking enables semantic search in a few steps, without the need for generating and storing embeddings. This a great tool for testing and building hybrid search systems in Elasticsearch.\n",
+    "\n",
+    "*Note* The `inference_id` field is now optional. If not provided, it defaults to `.rerank-v1-elasticsearch`."
    ]
   },
   {
