--- a/supporting-blog-content/using-crewai-with-elasticsearch/using_crewai_with_elasticsearch_notebook.ipynb
+++ b/supporting-blog-content/using-crewai-with-elasticsearch/using_crewai_with_elasticsearch_notebook.ipynb
@@ -517,7 +517,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "3.11.11",
+      "display_name": "Python 3",
       "language": "python",
       "name": "python3"
     },
