--- a/notebooks/search/12-semantic-reranking-elastic-rerank.ipynb
+++ b/notebooks/search/12-semantic-reranking-elastic-rerank.ipynb
@@ -463,7 +463,7 @@
     "\n",
     "Semantic reranking enables semantic search in a few steps, without the need for generating and storing embeddings. This a great tool for testing and building hybrid search systems in Elasticsearch.\n",
     "\n",
-    "*Note* The `inference_id` field is optional and if not provided, it defaults to `.rerank-v1-elasticsearch`. However, If you prefer to manage your own endpoint, follow the instrictions provided in the [docs](https://www.elastic.co/guide/en/elasticsearch/reference/current/infer-service-elasticsearch.html#inference-example-elastic-reranker)."
+    "*Note* The `inference_id` field is optional and if not provided, it defaults to `.rerank-v1-elasticsearch`. However, If you prefer to manage your own endpoint, you can set up a custom `rerank` inference endpoint using the [create inference API](https://www.elastic.co/docs/api/doc/elasticsearch/operation/operation-inference-put)."
    ]
   },
   {
