endpoint name - duplicate
Found endpoint name was duplicated.  fixed

--- a/supporting-blog-content/unifying-elastic-vector-database-and-llms-for-intelligent-query/Unifying_Elastic_Vector_Database_and_LLMs_for_Intelligent_Query.ipynb
+++ b/supporting-blog-content/unifying-elastic-vector-database-and-llms-for-intelligent-query/Unifying_Elastic_Vector_Database_and_LLMs_for_Intelligent_Query.ipynb
@@ -234,7 +234,7 @@
     "# JSON dataset URL\n",
     "DATASET_URL = \"https://ela.st/hotels-dataset\"\n",
     "\n",
-    "ELSER_ENDPOINT_NAME = \"my-e5-endpoint\"\n",
+    "ELSER_ENDPOINT_NAME = \"my-elser-endpoint\"\n",
     "E5_ENDPOINT_NAME = \"my-e5-endpoint\"\n",
     "\n",
     "\n",
