Install elasticsearch<9 in notebooks

--- a/notebooks/document-chunking/configuring-chunking-settings-for-inference-endpoints.ipynb
+++ b/notebooks/document-chunking/configuring-chunking-settings-for-inference-endpoints.ipynb
@@ -62,7 +62,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install elasticsearch"
+    "!pip install elasticsearch<9"
    ]
   },
   {
