--- a/notebooks/ingestion-and-chunking/json-chunking-ingest.ipynb
+++ b/notebooks/ingestion-and-chunking/json-chunking-ingest.ipynb
@@ -29,7 +29,7 @@
    },
    "outputs": [],
    "source": [
-    "!pip install -qU langchain_community langchain elasticsearch tiktoken langchain-elasticsearch jq"
+    "!pip install -qU langchain_community langchain elasticsearch<9 tiktoken langchain-elasticsearch jq"
    ]
   },
   {
