--- a/notebooks/integrations/hugging-face/loading-model-from-hugging-face.ipynb
+++ b/notebooks/integrations/hugging-face/loading-model-from-hugging-face.ipynb
@@ -47,7 +47,7 @@
    },
    "outputs": [],
    "source": [
-    "!python3 -m pip install sentence-transformers==2.7.0 eland elasticsearch transformers"
+    "!python3 -m pip install sentence-transformers==2.7.0 eland<9 elasticsearch<9 transformers"
    ]
   },
   {
