--- a/notebooks/search/00-quick-start.ipynb
+++ b/notebooks/search/00-quick-start.ipynb
@@ -53,7 +53,7 @@
    },
    "outputs": [],
    "source": [
-    "!pip install -qU elasticsearch sentence-transformers==2.7.0"
+    "!pip install -qU elasticsearch<9 sentence-transformers==2.7.0"
    ]
   },
   {
