Use quotes to avoid shell redirect

--- a/notebooks/document-chunking/with-langchain-splitters.ipynb
+++ b/notebooks/document-chunking/with-langchain-splitters.ipynb
@@ -38,7 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!python3 -m pip install -qU langchain langchain-community langchain-elasticsearch elasticsearch<9 eland<9 jq"
+    "!python3 -m pip install -qU langchain langchain-community langchain-elasticsearch \"elasticsearch<9\" \"eland<9\" jq"
    ]
   },
   {
