--- a/notebooks/ingestion-and-chunking/pdf-chunking-ingest.ipynb
+++ b/notebooks/ingestion-and-chunking/pdf-chunking-ingest.ipynb
@@ -29,7 +29,7 @@
    },
    "outputs": [],
    "source": [
-    "!pip install -qU  pypdf langchain_community langchain elasticsearch<9 tiktoken langchain-elasticsearch"
+    "!pip install -qU  pypdf langchain_community langchain \"elasticsearch<9\" tiktoken langchain-elasticsearch"
    ]
   },
   {
