--- a/notebooks/model-upgrades/upgrading-index-to-use-elser.ipynb
+++ b/notebooks/model-upgrades/upgrading-index-to-use-elser.ipynb
@@ -39,7 +39,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install elasticsearch<9 -qU"
+    "!pip install \"elasticsearch<9\" -qU"
    ]
   },
   {
