--- a/notebooks/search/02-hybrid-search.ipynb
+++ b/notebooks/search/02-hybrid-search.ipynb
@@ -44,7 +44,7 @@
    },
    "outputs": [],
    "source": [
-    "!pip install -qU elasticsearch<9 sentence-transformers==2.7.0"
+    "!pip install -qU \"elasticsearch<9\" sentence-transformers==2.7.0"
    ]
   },
   {
