--- a/notebooks/search/03-ELSER.ipynb
+++ b/notebooks/search/03-ELSER.ipynb
@@ -48,7 +48,7 @@
    },
    "outputs": [],
    "source": [
-    "!pip install -qU elasticsearch<9"
+    "!pip install -qU \"elasticsearch<9\""
    ]
   },
   {
