--- a/notebooks/search/05-query-rules.ipynb
+++ b/notebooks/search/05-query-rules.ipynb
@@ -53,7 +53,7 @@
    },
    "outputs": [],
    "source": [
-    "!pip install -qU elasticsearch<9"
+    "!pip install -qU \"elasticsearch<9\""
    ]
   },
   {
