--- a/notebooks/search/06-synonyms-api.ipynb
+++ b/notebooks/search/06-synonyms-api.ipynb
@@ -52,7 +52,7 @@
    },
    "outputs": [],
    "source": [
-    "!pip install -qU elasticsearch<9"
+    "!pip install -qU \"elasticsearch<9\""
    ]
   },
   {
