--- a/notebooks/search/09-semantic-text.ipynb
+++ b/notebooks/search/09-semantic-text.ipynb
@@ -84,7 +84,7 @@
    },
    "outputs": [],
    "source": [
-    "!pip install elasticsearch<9"
+    "!pip install \"elasticsearch<9\""
    ]
   },
   {
