Pin to elasticsearch<9 in more places

--- a/notebooks/langchain/langchain-vector-store-using-elser.ipynb
+++ b/notebooks/langchain/langchain-vector-store-using-elser.ipynb
@@ -33,7 +33,7 @@
    "outputs": [],
    "source": [
     "# install packages\n",
-    "!python3 -m pip install -qU langchain langchain-elasticsearch openai tiktoken\n",
+    "!python3 -m pip install -qU langchain langchain-elasticsearch \"elasticsearch<9\" openai tiktoken\n",
     "\n",
     "# import modules\n",
     "from getpass import getpass\n",
