--- a/notebooks/search/_nbtest.setup.ipynb
+++ b/notebooks/search/_nbtest.setup.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install -qU elasticsearch sentence-transformers==2.7.0"
+    "!pip install -qU "elasticsearch<9" sentence-transformers==2.7.0"
    ]
   },
   {
