--- a/notebooks/document-chunking/with-index-pipelines.ipynb
+++ b/notebooks/document-chunking/with-index-pipelines.ipynb
@@ -61,7 +61,7 @@
    },
    "outputs": [],
    "source": [
-    "!python3 -m pip install -qU \"elasticsearch<9\" \"eland<9\""
+    "!python3 -m pip install -qU \"elasticsearch<9\" \"eland[pytorch]<9\""
    ]
   },
   {
