--- a/notebooks/langchain/_nbtest.setup.langchain-vector-store-using-elser.ipynb
+++ b/notebooks/langchain/_nbtest.setup.langchain-vector-store-using-elser.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install -qU elasticsearch"
+    "!pip install -qU \"elasticsearch<9\""
    ]
   },
   {
