--- a/notebooks/ingestion-and-chunking/website-chunking-ingest.ipynb
+++ b/notebooks/ingestion-and-chunking/website-chunking-ingest.ipynb
@@ -29,7 +29,7 @@
    },
    "outputs": [],
    "source": [
-    "!pip install -qU langchain_community langchain elasticsearch tiktoken langchain-elasticsearch unstructured"
+    "!pip install -qU langchain_community langchain \"elasticsearch<9\" tiktoken langchain-elasticsearch unstructured"
    ]
   },
   {
