--- a/notebooks/search/01-keyword-querying-filtering.ipynb
+++ b/notebooks/search/01-keyword-querying-filtering.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install -qU elasticsearch pandas"
+    "!pip install -qU \"elasticsearch<9\" pandas"
    ]
   },
   {
