--- a/supporting-blog-content/enhance-microsoft-copilot-with-elasticsearch/invoices-api.ipynb
+++ b/supporting-blog-content/enhance-microsoft-copilot-with-elasticsearch/invoices-api.ipynb
@@ -108,7 +108,7 @@
     "                \"properties\": {\n",
     "                    \"id\": {\"type\": \"keyword\"},\n",
     "                    \"file_url\": {\"type\": \"keyword\"},\n",
-    "                    \"issue_date\": {\"type\": \"date\", \"copy_to\": \"semantic_field\"},\n",
+    "                    \"issue_date\": {\"type\": \"date\"},\n",
     "                    \"description\": {\"type\": \"text\", \"copy_to\": \"semantic_field\"},\n",
     "                    \"services\": {\n",
     "                        \"type\": \"object\",\n",
@@ -117,13 +117,12 @@
     "                                \"type\": \"text\",\n",
     "                                \"copy_to\": \"semantic_field\",\n",
     "                            },\n",
-    "                            \"price\": {\n",
-    "                                \"type\": \"float\",\n",
-    "                                \"copy_to\": \"semantic_field\",\n",
-    "                            },\n",
+    "                            \"price\": {\"type\": \"float\"},\n",
     "                        },\n",
     "                    },\n",
-    "                    \"total_amount\": {\"type\": \"float\", \"copy_to\": \"semantic_field\"},\n",
+    "                    \"total_amount\": {\n",
+    "                        \"type\": \"float\",\n",
+    "                    },\n",
     "                    \"semantic_field\": {\"type\": \"semantic_text\"},\n",
     "                }\n",
     "            }\n",
@@ -359,7 +358,6 @@
     "        results = [{\"score\": hit[\"_score\"], **hit[\"_source\"]} for hit in hits]\n",
     "\n",
     "        return results\n",
-    "\n",
     "    except Exception as e:\n",
     "        return Exception(f\"Error: {str(e)}\")\n",
     "\n",
@@ -390,7 +388,6 @@
     "        results = [hit[\"_source\"] for hit in hits]\n",
     "\n",
     "        return results\n",
-    "\n",
     "    except Exception as e:\n",
     "        return Exception(f\"Error: {str(e)}\")"
    ]
