Removing numeric fields from semantic_field

--- a/supporting-blog-content/llamaindex-re-ranker-and-elasticsearch-re-ranker/llamaindex_rerank_notebook.ipynb
+++ b/supporting-blog-content/llamaindex-re-ranker-and-elasticsearch-re-ranker/llamaindex_rerank_notebook.ipynb
@@ -680,9 +680,13 @@
         "                \"properties\": {\n",
         "                    \"name\": {\"type\": \"text\", \"copy_to\": \"semantic_field\"},\n",
         "                    \"description\": {\"type\": \"text\", \"copy_to\": \"semantic_field\"},\n",
-        "                    \"price\": {\"type\": \"float\", \"copy_to\": \"semantic_field\"},\n",
-        "                    \"reviews\": {\"type\": \"float\", \"copy_to\": \"semantic_field\"},\n",
-        "                    \"sales\": {\"type\": \"integer\", \"copy_to\": \"semantic_field\"},\n",
+        "                    \"price\": {\n",
+        "                        \"type\": \"float\",\n",
+        "                    },\n",
+        "                    \"reviews\": {\n",
+        "                        \"type\": \"float\",\n",
+        "                    },\n",
+        "                    \"sales\": {\"type\": \"integer\"},\n",
         "                    \"features\": {\"type\": \"keyword\", \"copy_to\": \"semantic_field\"},\n",
         "                    \"semantic_field\": {\"type\": \"semantic_text\"},\n",
         "                }\n",
