--- a/notebooks/search/02-hybrid-search.ipynb
+++ b/notebooks/search/02-hybrid-search.ipynb
@@ -280,18 +280,20 @@
     "response = client.search(\n",
     "    index=\"book_index\",\n",
     "    size=5,\n",
-    "    query={\"match\": {\"summary\": \"python programming\"}},\n",
-    "    knn={\n",
-    "        \"field\": \"title_vector\",\n",
-    "        \"query_vector\": model.encode(\n",
-    "            \"python programming\"\n",
-    "        ).tolist(),  # generate embedding for query so it can be compared to `title_vector`\n",
-    "        \"k\": 5,\n",
-    "        \"num_candidates\": 10,\n",
-    "    },\n",
-    "    retriever={\"rrf\": {}},\n",
+    "    retriever={\n",
+    "        \"rrf\": {\n",
+    "            \"retrievers\": [\n",
+    "                {\"standard\": {\"query\": {\"match\": {\"summary\": \"python programming\"}}}},\n",
+    "                {\"knn\": {\n",
+    "                    \"field\": \"title_vector\",\n",
+    "                    \"query_vector\": model.encode(\"python programming\").tolist(),\n",
+    "                    \"k\": 5,\n",
+    "                    \"num_candidates\": 10\n",
+    "                }}\n",
+    "            ]\n",
+    "        }\n",
+    "    }\n",
     ")\n",
-    "\n",
     "pretty_response(response)"
    ]
   }
