Format notebook with black-jupyter pre-commit hook

--- a/notebooks/search/02-hybrid-search.ipynb
+++ b/notebooks/search/02-hybrid-search.ipynb
@@ -284,15 +284,17 @@
     "        \"rrf\": {\n",
     "            \"retrievers\": [\n",
     "                {\"standard\": {\"query\": {\"match\": {\"summary\": \"python programming\"}}}},\n",
-    "                {\"knn\": {\n",
-    "                    \"field\": \"title_vector\",\n",
-    "                    \"query_vector\": model.encode(\"python programming\").tolist(),\n",
-    "                    \"k\": 5,\n",
-    "                    \"num_candidates\": 10\n",
-    "                }}\n",
+    "                {\n",
+    "                    \"knn\": {\n",
+    "                        \"field\": \"title_vector\",\n",
+    "                        \"query_vector\": model.encode(\"python programming\").tolist(),\n",
+    "                        \"k\": 5,\n",
+    "                        \"num_candidates\": 10,\n",
+    "                    }\n",
+    "                },\n",
     "            ]\n",
     "        }\n",
-    "    }\n",
+    "    },\n",
     ")\n",
     "pretty_response(response)"
    ]
