--- a/supporting-blog-content/enhance-microsoft-copilot-with-elasticsearch/invoices_api.ipynb
+++ b/supporting-blog-content/enhance-microsoft-copilot-with-elasticsearch/invoices_api.ipynb
@@ -28,6 +28,7 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "import json\n",
     "from getpass import getpass\n",
     "from datetime import datetime\n",
     "\n",
@@ -51,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "aa378fdb",
    "metadata": {},
    "outputs": [],
@@ -74,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "4d8a8201",
    "metadata": {},
    "outputs": [],
@@ -146,151 +147,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "69f388c0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "invoices = [\n",
-    "    {\n",
-    "        \"id\": \"INV-0001\",\n",
-    "        \"file_url\": \"https://fake-invoices.example.com/fake/INV-0001.pdf\",\n",
-    "        \"issue_date\": \"2025-04-01\",\n",
-    "        \"description\": \"Invoice for technical consulting services\",\n",
-    "        \"services\": [\n",
-    "            {\"name\": \"Technical consulting\", \"price\": 1500.0},\n",
-    "            {\"name\": \"Remote support\", \"price\": 300.0},\n",
-    "        ],\n",
-    "        \"total_amount\": 1800.0,\n",
-    "    },\n",
-    "    {\n",
-    "        \"id\": \"INV-0002\",\n",
-    "        \"file_url\": \"https://fake-invoices.example.com/fake/INV-0002.pdf\",\n",
-    "        \"issue_date\": \"2025-04-03\",\n",
-    "        \"description\": \"Enterprise software license sale\",\n",
-    "        \"services\": [{\"name\": \"ERP software license\", \"price\": 5000.0}],\n",
-    "        \"total_amount\": 5000.0,\n",
-    "    },\n",
-    "    {\n",
-    "        \"id\": \"INV-0003\",\n",
-    "        \"file_url\": \"https://fake-invoices.example.com/fake/INV-0003.pdf\",\n",
-    "        \"issue_date\": \"2025-04-05\",\n",
-    "        \"description\": \"UX/UI design services\",\n",
-    "        \"services\": [\n",
-    "            {\"name\": \"UX design\", \"price\": 1200.0},\n",
-    "            {\"name\": \"UI design\", \"price\": 1000.0},\n",
-    "        ],\n",
-    "        \"total_amount\": 2200.0,\n",
-    "    },\n",
-    "    {\n",
-    "        \"id\": \"INV-0004\",\n",
-    "        \"file_url\": \"https://fake-invoices.example.com/fake/INV-0004.pdf\",\n",
-    "        \"issue_date\": \"2025-04-07\",\n",
-    "        \"description\": \"CRM system implementation\",\n",
-    "        \"services\": [\n",
-    "            {\"name\": \"CRM setup\", \"price\": 2500.0},\n",
-    "            {\"name\": \"User training\", \"price\": 700.0},\n",
-    "        ],\n",
-    "        \"total_amount\": 3200.0,\n",
-    "    },\n",
-    "    {\n",
-    "        \"id\": \"INV-0005\",\n",
-    "        \"file_url\": \"https://fake-invoices.example.com/fake/INV-0005.pdf\",\n",
-    "        \"issue_date\": \"2025-04-09\",\n",
-    "        \"description\": \"Monthly technical support\",\n",
-    "        \"services\": [\n",
-    "            {\"name\": \"Preventive maintenance\", \"price\": 400.0},\n",
-    "            {\"name\": \"Phone support\", \"price\": 200.0},\n",
-    "        ],\n",
-    "        \"total_amount\": 600.0,\n",
-    "    },\n",
-    "    {\n",
-    "        \"id\": \"INV-0006\",\n",
-    "        \"file_url\": \"https://fake-invoices.example.com/fake/INV-0006.pdf\",\n",
-    "        \"issue_date\": \"2025-04-11\",\n",
-    "        \"description\": \"IT audit services\",\n",
-    "        \"services\": [{\"name\": \"Security audit\", \"price\": 1800.0}],\n",
-    "        \"total_amount\": 1800.0,\n",
-    "    },\n",
-    "    {\n",
-    "        \"id\": \"INV-0007\",\n",
-    "        \"file_url\": \"https://fake-invoices.example.com/fake/INV-0007.pdf\",\n",
-    "        \"issue_date\": \"2025-04-13\",\n",
-    "        \"description\": \"Mobile app development\",\n",
-    "        \"services\": [\n",
-    "            {\"name\": \"Android development\", \"price\": 3000.0},\n",
-    "            {\"name\": \"iOS development\", \"price\": 3000.0},\n",
-    "        ],\n",
-    "        \"total_amount\": 6000.0,\n",
-    "    },\n",
-    "    {\n",
-    "        \"id\": \"INV-0008\",\n",
-    "        \"file_url\": \"https://fake-invoices.example.com/fake/INV-0008.pdf\",\n",
-    "        \"issue_date\": \"2025-04-15\",\n",
-    "        \"description\": \"Network equipment sales\",\n",
-    "        \"services\": [\n",
-    "            {\"name\": \"Business router\", \"price\": 800.0},\n",
-    "            {\"name\": \"Managed switch\", \"price\": 600.0},\n",
-    "        ],\n",
-    "        \"total_amount\": 1400.0,\n",
-    "    },\n",
-    "    {\n",
-    "        \"id\": \"INV-0009\",\n",
-    "        \"file_url\": \"https://fake-invoices.example.com/fake/INV-0009.pdf\",\n",
-    "        \"issue_date\": \"2025-04-17\",\n",
-    "        \"description\": \"Annual subscription renewal\",\n",
-    "        \"services\": [{\"name\": \"SaaS platform subscription\", \"price\": 1200.0}],\n",
-    "        \"total_amount\": 1200.0,\n",
-    "    },\n",
-    "    {\n",
-    "        \"id\": \"INV-0010\",\n",
-    "        \"file_url\": \"https://fake-invoices.example.com/fake/INV-0010.pdf\",\n",
-    "        \"issue_date\": \"2025-04-19\",\n",
-    "        \"description\": \"Specialized technical support hours\",\n",
-    "        \"services\": [{\"name\": \"Specialized support (10h)\", \"price\": 1000.0}],\n",
-    "        \"total_amount\": 1000.0,\n",
-    "    },\n",
-    "    {\n",
-    "        \"id\": \"INV-0011\",\n",
-    "        \"file_url\": \"https://fake-invoices.example.com/fake/INV-0011.pdf\",\n",
-    "        \"issue_date\": \"2025-04-20\",\n",
-    "        \"description\": \"Business lunch with client\",\n",
-    "        \"services\": [{\"name\": \"Lunch at La Terraza Bistro\", \"price\": 85.0}],\n",
-    "        \"total_amount\": 85.0,\n",
-    "    },\n",
-    "    {\n",
-    "        \"id\": \"INV-0012\",\n",
-    "        \"file_url\": \"https://fake-invoices.example.com/fake/INV-0012.pdf\",\n",
-    "        \"issue_date\": \"2025-04-21\",\n",
-    "        \"description\": \"Hotel accommodation during client visit\",\n",
-    "        \"services\": [{\"name\": \"3-night stay at Hotel Central\", \"price\": 450.0}],\n",
-    "        \"total_amount\": 450.0,\n",
-    "    },\n",
-    "    {\n",
-    "        \"id\": \"INV-0013\",\n",
-    "        \"file_url\": \"https://fake-invoices.example.com/fake/INV-0013.pdf\",\n",
-    "        \"issue_date\": \"2025-04-22\",\n",
-    "        \"description\": \"Team-building activity\",\n",
-    "        \"services\": [{\"name\": \"Escape room experience for team\", \"price\": 200.0}],\n",
-    "        \"total_amount\": 200.0,\n",
-    "    },\n",
-    "    {\n",
-    "        \"id\": \"INV-0014\",\n",
-    "        \"file_url\": \"https://fake-invoices.example.com/fake/INV-0014.pdf\",\n",
-    "        \"issue_date\": \"2025-04-23\",\n",
-    "        \"description\": \"Local transportation for conference\",\n",
-    "        \"services\": [{\"name\": \"Taxi and metro rides\", \"price\": 60.0}],\n",
-    "        \"total_amount\": 60.0,\n",
-    "    },\n",
-    "    {\n",
-    "        \"id\": \"INV-0015\",\n",
-    "        \"file_url\": \"https://fake-invoices.example.com/fake/INV-0015.pdf\",\n",
-    "        \"issue_date\": \"2025-04-24\",\n",
-    "        \"description\": \"Client entertainment dinner\",\n",
-    "        \"services\": [{\"name\": \"Dinner at El Gourmet\", \"price\": 130.0}],\n",
-    "        \"total_amount\": 130.0,\n",
-    "    },\n",
-    "]"
+    "with open(\"invoices_data.json\", \"r\", encoding=\"utf-8\") as f:\n",
+    "    invoices = json.load(f)"
    ]
   },
   {
