--- a/notebooks/integrations/gemini/google-vertex-ai-chat-completion-notebook.ipynb
+++ b/notebooks/integrations/gemini/google-vertex-ai-chat-completion-notebook.ipynb
@@ -140,7 +140,7 @@
       "source": [
         "ELASTIC_USER = getpass(\"ELASTIC USER: \")\n",
         "ELASTIC_PASSWORD = getpass(\"ELASTIC PASSWORD: \")\n",
-        "host = \"35.219.179.83:19200\" # use your own host\n",
+        "host = \"\" # use your own host\n",
         "\n",
         "client = Elasticsearch(\n",
         "    hosts=[f\"http://{host}/\"],\n",
@@ -255,8 +255,8 @@
       "source": [
         "GOOGLE_API_KEY = getpass(\"Enter Google Service account API key:  \")\n",
         "inference_id = \"chat_completion-notebook-test1\" # set the inference ID for the endpoint\n",
-        "project_id = \"lhoet-elastic-demo\" # use your GCP project\n",
-        "location = \"us-central1\" # set the location in which Vertex AI models live\n",
+        "project_id = \"\" # use your GCP project\n",
+        "location = \"\" # set the location in which Vertex AI models live e.g us-central1\n",
         "\n",
         "model_id = \"gemini-2.5-flash-preview-05-20\" # choose the model, you could use any model from your Vertex AI."
       ]
