--- a/supporting-blog-content/from-image-idea-to-kibana-dashboard-using-ai/from-image-idea-to-kibana-dashboard-using-ai.ipynb
+++ b/supporting-blog-content/from-image-idea-to-kibana-dashboard-using-ai/from-image-idea-to-kibana-dashboard-using-ai.ipynb
@@ -36,7 +36,7 @@
     "import requests, time, os, base64, json, uuid, urllib.parse\n",
     "from IPython.display import Image, display\n",
     "from getpass import getpass\n",
-    "from typing import Any, Dict, List, Literal, Optional\n",
+    "from typing import Any, Dict, List, Literal\n",
     "\n",
     "from google.colab import files\n",
     "\n",
@@ -80,7 +80,7 @@
     "class Visualization(BaseModel):\n",
     "    title: str = Field(description=\"The dashboard title\")\n",
     "    type: List[Literal[\"pie\", \"bar\", \"metric\"]]\n",
-    "    field: Optional[str] = Field(\n",
+    "    field: str = Field(\n",
     "        description=\"The field that this visualization use based on the provided mappings\"\n",
     "    )\n",
     "\n",
@@ -379,7 +379,7 @@
     "    f\"timeRange:(from:now-7d/d,to:now),\"\n",
     "    f\"useHash:!f,viewMode:view)),\"\n",
     "    f\"objectType:dashboard,\"\n",
-    "    f\"title:'Web Traffic Overview',\"\n",
+    "    f\"title:'{dashboard_values.title}',\"\n",
     "    f\"version:'9.0.0')\"\n",
     ")\n",
     "\n",
