templates and code changes

--- a/supporting-blog-content/from-image-idea-to-kibana-dashboard-using-ai/from-image-idea-to-kibana-dashboard-using-ai.ipynb
+++ b/supporting-blog-content/from-image-idea-to-kibana-dashboard-using-ai/from-image-idea-to-kibana-dashboard-using-ai.ipynb
@@ -255,6 +255,7 @@
     "):\n",
     "    template_str = json.dumps(template)\n",
     "    replacements = {\n",
+    "        \"{visualization_id}\": str(uuid.uuid4()),\n",
     "        \"{title}\": visualization.title,\n",
     "        \"{x}\": grid_data[\"x\"],\n",
     "        \"{y}\": grid_data[\"y\"],\n",
@@ -277,18 +278,10 @@
    "source": [
     "panels = []\n",
     "grid_data = [\n",
-    "    {\n",
-    "        \"x\": 0,\n",
-    "        \"y\": 0,\n",
-    "    },\n",
-    "    {\n",
-    "        \"x\": 12,\n",
-    "        \"y\": 0,\n",
-    "    },\n",
-    "    {\n",
-    "        \"x\": 6,\n",
-    "        \"y\": 12,\n",
-    "    },\n",
+    "    {\"x\": 0, \"y\": 0},\n",
+    "    {\"x\": 12, \"y\": 0},\n",
+    "    {\"x\": 0, \"y\": 12},\n",
+    "    {\"x\": 12, \"y\": 12},\n",
     "]\n",
     "\n",
     "i = 0\n",
