--- a/supporting-blog-content/from-image-idea-to-kibana-dashboard-using-ai/from-image-idea-to-kibana-dashboard-using-ai.ipynb
+++ b/supporting-blog-content/from-image-idea-to-kibana-dashboard-using-ai/from-image-idea-to-kibana-dashboard-using-ai.ipynb
@@ -106,7 +106,7 @@
     "- insPie.json\n",
     "- insMetric.json\n",
     "\n",
-    "You can find the templates in the `/templates` folder."
+    "You can find the templates in the `/templates` folder on the repository. Download the templates and upload them using the following code (Click on the upload button and load all the files together)."
    ]
   },
   {
@@ -174,7 +174,7 @@
    "metadata": {},
    "source": [
     "## Loading image \n",
-    "You can load an image from your local machine and use it to generate a dashboard. In the `/imgs` folder, you can find images to use as examples."
+    "You can load an image from your local machine and use it to generate a dashboard. In the `/imgs` folder on the repository, you can find images to use as examples."
    ]
   },
   {
