--- a/notebooks/integrations/gemini/google-vertex-ai-chat-completion-notebook.ipynb
+++ b/notebooks/integrations/gemini/google-vertex-ai-chat-completion-notebook.ipynb
@@ -7,13 +7,18 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": []
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "IHR_5ZfW69Mq"
       },
       "source": [
         "# Google Vertex AI Chat completion with Elastic\n",
         "\n",
-        "This notebook shows how to use Elastic Stream API to interact with Google Vertex AI models to perform Chat completion tasks.\n",
+        "This notebook shows how to use Elastic Inference API to interact with Google Vertex AI models to perform Chat completion tasks.\n",
         "\n",
         "You will need access to a Google Cloud project and enable the Vertex AI APIs, the GCP console will help you do that, follow the instructions. Please note that costs could derive from the use of Vertex AI.\n",
         "\n",
@@ -37,7 +42,7 @@
       "source": [
         "**Install Python dependencies**\n",
         "\n",
-        "We will use the `elasticsearch` python library to create the inference endpoint and the `requests` library to make HTTP Calls to the Elastic Stream API."
+        "We will use the `elasticsearch` python library to create the inference endpoint and the `requests` library to make HTTP Calls to the Elastic Inference API."
       ]
     },
     {
